--- a/WEB/public/event.html
+++ b/WEB/public/event.html
@@ -29,6 +29,7 @@
     </tbody>
   </table>
   <p id="regs-summary"></p>
+  <p><a id="register-link" class="btn" href="#">Register</a></p>
   <script src="/js/event.js"></script>
 </body>
 </html>
