--- a/WEB/public/register.html
+++ b/WEB/public/register.html
@@ -1,56 +1,18 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <title>Register for Event</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body { font-family: system-ui, Arial, sans-serif; max-width: 900px; margin: 24px auto; }
-    header a { margin-right: 12px; }
-    fieldset { border: 1px solid #ccc; padding: 16px; }
-    label { display:block; margin: 8px 0 4px; }
-    input, button { padding: 6px; }
-    .row { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
-    #msg { margin-top: 12px; font-weight: 600; }
-    .event-summary { background:#fafafa; border:1px solid #ddd; padding:12px; margin-bottom:16px; }
-  </style>
-</head>
-<body>
-  <header>
-    <a href="/index.html">Home</a> |
-    <a href="/events.html">Browse events</a> |
-    <a href="javascript:history.back()">← Back</a>
-  </header>
+<a id="back-link" href="#">← Back</a>
 
-  <h1>Register</h1>
+<h1>Register</h1>
 
-  <section id="event" class="event-summary">Loading event…</section>
+<p id="msg">Loading event...</p>
 
-  <form id="reg-form">
-    <fieldset>
-      <legend>Your details</legend>
-      <label for="full_name">Full name *</label>
-      <input id="full_name" name="full_name" required />
+<p><strong id="event-title"></strong></p>
+<p id="event-brief"></p>
 
-      <label for="email">Email *</label>
-      <input id="email" name="email" type="email" required />
+<form id="reg-form">
+  <label>Full name * <input id="full_name" required></label><br>
+  <label>Email * <input id="email" type="email" required></label><br>
+  <label>Phone <input id="phone"></label><br>
+  <label>Tickets * <input id="tickets" type="number" min="1" value="1" required></label><br>
+  <button type="submit">Confirm registration</button>
+</form>
 
-      <div class="row">
-        <div>
-          <label for="phone">Phone</label>
-          <input id="phone" name="phone" />
-        </div>
-        <div>
-          <label for="tickets">Tickets *</label>
-          <input id="tickets" name="tickets" type="number" min="1" value="1" required />
-        </div>
-      </div>
-
-      <button type="submit">Confirm registration</button>
-      <div id="msg"></div>
-    </fieldset>
-  </form>
-
-  <script src="/js/register.js"></script>
-</body>
-</html>
+<script src="/js/register.js"></script>
