--- a/Admin/public/index.html
+++ b/Admin/public/index.html
@@ -70,9 +70,9 @@
     </section>
   </div>
 
-  <script>
-    window.API_BASE = (new URLSearchParams(location.search).get('api') || '${process.env.API_BASE || ''}').replace(/\/$/, '');
-  </script>
+    <script>
+    window.API_BASE = (new URLSearchParams(location.search).get('api') || '').replace(/\/$/, '');
+    </script>
   <script src="js/admin.js"></script>
 </body>
 </html>
