--- a/Admin/public/index.html
+++ b/Admin/public/index.html
@@ -73,6 +73,14 @@
   <script>
     window.API_BASE = (new URLSearchParams(location.search).get('api') || '').replace(/\/$/, '');
   </script>
-  <script src="js/admin.js"></script>  
+  <script src="/config.js"></script>
+<script>
+  window.API_BASE = (new URLSearchParams(location.search).get('api')
+                    || window.API_BASE
+                    || 'http://localhost:3060/api').replace(/\/$/, '');
+  console.log('Admin using API_BASE =', window.API_BASE);
+</script>
+<script src="js/admin.js"></script>
+  
 </body>
 </html>
