--- a/WEB/public/add.html
+++ b/WEB/public/add.html
@@ -103,7 +103,7 @@
     <button type="submit">Create</button>
     <div id="msg"></div>
   </form>
-
+  <link rel="stylesheet" href="css/style.css">
   <script src="/js/add.js"></script>
 </body>
 </html>
