--- a/WEB/public/event.html
+++ b/WEB/public/event.html
@@ -28,6 +28,8 @@
     </tbody>
   </table>
   <p id="regs-summary"></p>
+  <link rel="stylesheet" href="css/style.css">
+
   <script src="/js/event.js"></script>
 </body>
 </html>
