--- a/WEB/public/events.html
+++ b/WEB/public/events.html
@@ -52,7 +52,7 @@
     </thead>
     <tbody id="results-body"></tbody>
   </table>
-
+  <link rel="stylesheet" href="css/style.css">
   <!-- IMPORTANT: this page must load ONLY events.js -->
   <script src="/js/events.js"></script>
 </body>
