--- a/WEB/public/register.html
+++ b/WEB/public/register.html
@@ -68,7 +68,7 @@
       </div>
     </div>
   </div>
-
+  <link rel="stylesheet" href="css/style.css">
   <script src="/js/register.js"></script>
 </body>
 </html>
