--- a/WEB/public/event.html
+++ b/WEB/public/event.html
@@ -28,7 +28,7 @@
     </tbody>
   </table>
   <p id="regs-summary"></p>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/app.css?v=1">
 
   <script src="/js/event.js"></script>
 </body>
