--- a/WEB/public/events.html
+++ b/WEB/public/events.html
@@ -52,7 +52,8 @@
     </thead>
     <tbody id="results-body"></tbody>
   </table>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/app.css?v=1">
+
   <!-- IMPORTANT: this page must load ONLY events.js -->
   <script src="/js/events.js"></script>
 </body>
