--- a/WEB/public/register.html
+++ b/WEB/public/register.html
@@ -68,7 +68,8 @@
       </div>
     </div>
   </div>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/app.css?v=1">
+
   <script src="/js/register.js"></script>
 </body>
 </html>
