--- a/WEB/public/add.html
+++ b/WEB/public/add.html
@@ -103,7 +103,8 @@
     <button type="submit">Create</button>
     <div id="msg"></div>
   </form>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/app.css?v=1">
+
   <script src="/js/add.js"></script>
 </body>
 </html>
