--- a/WEB/public/index.html
+++ b/WEB/public/index.html
@@ -13,6 +13,7 @@
     <h2 style="margin-top:24px">Upcoming events</h2>
     <div id="home-list">Loading…</div>
   </section>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/app.css?v=1">
+
   <script src="/js/home.js"></script>
 </body>
