--- a/WEB/public/add.html
+++ b/WEB/public/add.html
@@ -4,106 +4,105 @@
   <meta charset="utf-8" />
   <title>Add Event</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/styles.css" />
-  <style>
-    form { max-width: 720px; display: grid; gap: 10px; }
-    label { font-weight: 600; }
-    input, select, textarea, button { padding: 6px; }
-    details { margin-top: 6px; }
-    #msg { margin-top: 6px; font-weight: 600; }
-  </style>
+  <link rel="stylesheet" href="/css/app.css?v=2">
 </head>
 <body>
-  <p><a href="/index.html">Home</a> | <a href="/events.html">Browse events</a> | <a href="/add.html">Add event</a></p>
-  <p><a href="/events.html">← Back to events</a></p>
+  <div class="container">
+    <header class="topbar">
+      <a href="/index.html">Home</a>
+      <a href="/events.html">Browse events</a>
+      <a href="/add.html">Add event</a>
+    </header>
 
-  <h1>Add Event</h1>
+    <div class="card">
+      <div class="section">
+        <h1>Add Event</h1>
+        <form id="create-form" class="grid" style="gap:14px; max-width:720px">
+          <!-- Required -->
+          <div>
+            <label for="org_id">Organisation</label>
+            <select id="org_id" required>
+              <option value="" selected disabled>Choose…</option>
+              <option value="1">Charity A</option>
+              <option value="2">Charity B</option>
+            </select>
+          </div>
 
-  <form id="create-form">
-    <!-- Required -->
-    <div>
-      <label for="org_id">Organisation</label><br />
-      <select id="org_id" required>
-        <option value="" selected disabled>Choose…</option>
-        <option value="1">Charity A</option>
-        <option value="2">Charity B</option>
-      </select>
+          <div>
+            <label for="category_id">Category</label>
+            <select id="category_id" required>
+              <option value="" selected disabled>Choose…</option>
+              <option value="1">Fun Run</option>
+              <option value="2">Workshop</option>
+              <option value="3">Charity Dinner</option>
+            </select>
+          </div>
+
+          <div>
+            <label for="title">Title</label>
+            <input id="title" type="text" required />
+          </div>
+
+          <div>
+            <label for="start_datetime">Start date/time</label>
+            <input id="start_datetime" type="datetime-local" required />
+          </div>
+
+          <details class="mt-2">
+            <summary>More options</summary>
+            <div class="grid mt-2" style="gap:12px">
+              <div>
+                <label for="description">Description</label>
+                <textarea id="description" rows="3" placeholder="Describe the event…"></textarea>
+              </div>
+              <div>
+                <label for="end_datetime">End date/time</label>
+                <input id="end_datetime" type="datetime-local" />
+              </div>
+              <div>
+                <label for="venue">Venue</label>
+                <input id="venue" type="text" />
+              </div>
+              <div class="form-row">
+                <div>
+                  <label for="city">City</label>
+                  <input id="city" type="text" />
+                </div>
+                <div>
+                  <label for="state">State</label>
+                  <input id="state" type="text" />
+                </div>
+              </div>
+              <div>
+                <label for="country">Country</label>
+                <input id="country" type="text" value="Australia" />
+              </div>
+              <div class="form-row">
+                <div>
+                  <label for="capacity">Capacity</label>
+                  <input id="capacity" type="number" min="0" />
+                </div>
+                <div>
+                  <label for="ticket_price">Ticket price (AUD)</label>
+                  <input id="ticket_price" type="number" step="0.01" min="0" />
+                </div>
+              </div>
+              <div>
+                <label for="goal_amount">Goal amount (AUD)</label>
+                <input id="goal_amount" type="number" step="0.01" min="0" />
+              </div>
+            </div>
+          </details>
+
+          <div class="actions mt-3">
+            <button type="submit" class="btn primary">Create</button>
+            <a class="btn ghost" href="/events.html">Cancel</a>
+          </div>
+          <div id="msg" class="notice mt-2" aria-live="polite"></div>
+        </form>
+      </div>
     </div>
-
-    <div>
-      <label for="category_id">Category</label><br />
-      <select id="category_id" required>
-        <option value="" selected disabled>Choose…</option>
-        <option value="1">Fun Run</option>
-        <option value="2">Workshop</option>
-        <option value="3">Charity Dinner</option>
-      </select>
-    </div>
-
-    <div>
-      <label for="title">Title</label><br />
-      <input id="title" type="text" required />
-    </div>
-
-    <div>
-      <label for="start_datetime">Start date/time</label><br />
-      <input id="start_datetime" type="datetime-local" required />
-    </div>
-
-    <!-- Optional -->
-    <details>
-      <summary>More options</summary>
-
-      <div style="margin-top:10px">
-        <label for="description">Description</label><br />
-        <textarea id="description" rows="3" placeholder="Describe the event…"></textarea>
-      </div>
-
-      <div>
-        <label for="end_datetime">End date/time</label><br />
-        <input id="end_datetime" type="datetime-local" />
-      </div>
-
-      <div>
-        <label for="venue">Venue</label><br />
-        <input id="venue" type="text" />
-      </div>
-
-      <div>
-        <label for="city">City</label><br />
-        <input id="city" type="text" />
-      </div>
-
-      <div>
-        <label for="state">State</label><br />
-        <input id="state" type="text" />
-      </div>
-
-      <div>
-        <label for="country">Country</label><br />
-        <input id="country" type="text" value="Australia" />
-      </div>
-
-      <div>
-        <label for="capacity">Capacity</label><br />
-        <input id="capacity" type="number" min="0" />
-      </div>
-
-      <div>
-        <label for="ticket_price">Ticket price (AUD)</label><br />
-        <input id="ticket_price" type="number" step="0.01" min="0" />
-      </div>
-
-      <div>
-        <label for="goal_amount">Goal amount (AUD)</label><br />
-        <input id="goal_amount" type="number" step="0.01" min="0" />
-      </div>
-    </details>
-
-    <button type="submit">Create</button>
-    <div id="msg"></div>
-  </form>
-  <link rel="stylesheet" href="/css/app.css?v=1">
+  </div>
 
   <script src="/js/add.js"></script>
 </body>
