--- a/Admin/public/index.html
+++ b/Admin/public/index.html
@@ -1,142 +1,75 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8" />
-  <title>Admin · Events</title>
+  <title>Admin • Events</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/css/app.css?v=3">
+  <style>
+    body { font-family: system-ui, -apple-system, Segoe UI, sans-serif; max-width: 1100px; margin: 2rem auto; }
+    table { width: 100%; border-collapse: collapse; margin-top: .5rem }
+    th, td { border: 1px solid #ccc; padding: .5rem; }
+    form label { display:block; margin:.25rem 0 }
+    .row { display:grid; grid-template-columns: 2fr 1fr; gap:2rem; align-items:start; }
+    .toolbar { display:flex; gap:.5rem; }
+    .danger { color:#b00 }
+    .ok { color:#0a0 }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <!-- Top bar -->
-    <header class="topbar">
-      <a href="/index.html">Home</a>
-      <a href="/events.html">Browse events</a>
-      <strong style="margin-left:auto">Admin</strong>
-    </header>
+  <h1>Admin • Events</h1>
 
-    <!-- API status / actions -->
-    <section class="card">
-      <div class="section spread">
-        <div>
-          <h1 style="margin:0">Admin • Events</h1>
-          <p id="api-status" class="notice ok mt-2" style="display:none"></p>
-        </div>
-        <div>
-          <button id="reload-btn" class="btn primary">Reload</button>
-        </div>
-      </div>
+  <div class="toolbar">
+    <button id="reloadBtn">Reload</button>
+    <span id="msg"></span>
+  </div>
+
+  <div class="row">
+    <section>
+      <h2>All events</h2>
+      <table>
+        <thead>
+          <tr><th>ID</th><th>Title</th><th>Category</th><th>Org</th><th>City</th><th>Start</th><th></th></tr>
+        </thead>
+        <tbody id="events-body"><tr><td colspan="7">Loading…</td></tr></tbody>
+      </table>
     </section>
 
-    <!-- Two-column admin workspace -->
-    <section class="grid grid-2 mt-3">
-      <!-- LEFT: events table -->
-      <div class="card">
-        <div class="section">
-          <h2>All events</h2>
-          <div class="table mt-2">
-            <table>
-              <thead>
-                <tr>
-                  <th>ID</th>
-                  <th>Title</th>
-                  <th>Category</th>
-                  <th>Org</th>
-                  <th>City</th>
-                  <th>Start</th>
-                  <th style="width:140px">Actions</th>
-                </tr>
-              </thead>
-              <tbody id="events-tbody">
-                <tr><td colspan="7" class="muted">Loading…</td></tr>
-              </tbody>
-            </table>
-          </div>
+    <section>
+      <h2 id="form-title">New event</h2>
+      <form id="event-form">
+        <input type="hidden" id="event_id" />
+        <label>Organisation <select id="org_id" required></select></label>
+        <label>Category <select id="category_id" required></select></label>
+        <label>Title <input id="title" required></label>
+        <label>Start <input id="start_datetime" type="datetime-local" required></label>
+        <label>End <input id="end_datetime" type="datetime-local"></label>
+        <label>Venue <input id="venue"></label>
+        <label>City <input id="city"></label>
+        <label>State <input id="state"></label>
+        <label>Country <input id="country"></label>
+        <label>Capacity <input id="capacity" type="number" min="0"></label>
+        <label>Ticket price (AUD) <input id="ticket_price" type="number" step="0.01" min="0"></label>
+        <label>Goal amount (AUD) <input id="goal_amount" type="number" step="0.01" min="0"></label>
+        <label>Description <textarea id="description"></textarea></label>
+        <div class="toolbar">
+          <button type="submit">Save</button>
+          <button type="button" id="resetBtn">Reset</button>
         </div>
-      </div>
-
-      <!-- RIGHT: new/edit form -->
-      <div class="card">
-        <div class="section">
-          <h2 id="form-title">New event</h2>
-          <form id="event-form" class="grid" style="gap:12px">
-            <div class="form-row">
-              <div>
-                <label for="org_id">Organisation</label>
-                <select id="org_id" required>
-                  <option value="1">Charity A</option>
-                  <option value="2">Charity B</option>
-                </select>
-              </div>
-              <div>
-                <label for="category_id">Category</label>
-                <select id="category_id" required>
-                  <option value="1">Fun Run</option>
-                  <option value="2">Workshop</option>
-                  <option value="3">Charity Dinner</option>
-                </select>
-              </div>
-            </div>
-
-            <div>
-              <label for="title">Title</label>
-              <input id="title" required>
-            </div>
-
-            <div class="form-row">
-              <div>
-                <label for="start_datetime">Start</label>
-                <input id="start_datetime" type="datetime-local" required>
-              </div>
-              <div>
-                <label for="end_datetime">End</label>
-                <input id="end_datetime" type="datetime-local">
-              </div>
-            </div>
-
-            <div>
-              <label for="venue">Venue</label>
-              <input id="venue">
-            </div>
-
-            <div class="form-row">
-              <div><label for="city">City</label><input id="city"></div>
-              <div><label for="state">State</label><input id="state"></div>
-            </div>
-
-            <div>
-              <label for="country">Country</label>
-              <input id="country" value="Australia">
-            </div>
-
-            <div class="form-row">
-              <div><label for="capacity">Capacity</label><input id="capacity" type="number" min="0"></div>
-              <div><label for="ticket_price">Ticket price (AUD)</label><input id="ticket_price" type="number" step="0.01" min="0"></div>
-            </div>
-
-            <div>
-              <label for="goal_amount">Goal amount (AUD)</label>
-              <input id="goal_amount" type="number" step="0.01" min="0">
-            </div>
-
-            <div>
-              <label for="description">Description</label>
-              <textarea id="description" rows="4"></textarea>
-            </div>
-
-            <div class="actions mt-2">
-              <button id="save-btn"  type="submit" class="btn primary">Save</button>
-              <button id="reset-btn" type="button" class="btn ghost">Reset</button>
-            </div>
-
-            <div id="form-msg" class="notice mt-2" aria-live="polite" style="display:none"></div>
-          </form>
-        </div>
-      </div>
+      </form>
+      <div id="form-msg"></div>
     </section>
   </div>
 
-  <!-- Your existing admin JS -->
-  <script src="/js/admin.js"></script>
+  <script>
+    window.API_BASE = (new URLSearchParams(location.search).get('api') || '').replace(/\/$/, '');
+  </script>
+  <script src="/config.js"></script>
+  <script>
+    window.API_BASE = (new URLSearchParams(location.search).get('api')
+                      || window.API_BASE
+                      || 'http://localhost:3060/api').replace(/\/$/, '');
+    console.log('Admin using API_BASE =', window.API_BASE);
+  </script>
+  <script src="js/admin.js"></script>
 </body>
 </html>
