--- a/Admin/public/index.html
+++ b/Admin/public/index.html
@@ -71,5 +71,6 @@
     console.log('Admin using API_BASE =', window.API_BASE);
   </script>
   <script src="js/admin.js"></script>
+  <link rel="stylesheet" href="/css/app.css?v=3">
 </body>
 </html>
