--- a/Admin/public/index.html
+++ b/Admin/public/index.html
@@ -1,62 +1,99 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>Admin • Events</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, sans-serif; max-width: 1100px; margin: 2rem auto; }
-    table { width: 100%; border-collapse: collapse; margin-top: .5rem }
-    th, td { border: 1px solid #ccc; padding: .5rem; }
-    form label { display:block; margin:.25rem 0 }
-    .row { display:grid; grid-template-columns: 2fr 1fr; gap:2rem; align-items:start; }
-    .toolbar { display:flex; gap:.5rem; }
-    .danger { color:#b00 }
-    .ok { color:#0a0 }
-  </style>
+  <!-- use the same global theme -->
+  <link rel="stylesheet" href="/css/app.css?v=3">
 </head>
 <body>
-  <h1>Admin • Events</h1>
+  <div class="container">
+    <!-- top nav like other pages -->
+    <header class="topbar">
+      <a href="/index.html">Home</a>
+      <a href="/events.html">Browse events</a>
+      <strong style="margin-left:auto">Admin</strong>
+    </header>
 
-  <div class="toolbar">
-    <button id="reloadBtn">Reload</button>
-    <span id="msg"></span>
-  </div>
-
-  <div class="row">
-    <section>
-      <h2>All events</h2>
-      <table>
-        <thead>
-          <tr><th>ID</th><th>Title</th><th>Category</th><th>Org</th><th>City</th><th>Start</th><th></th></tr>
-        </thead>
-        <tbody id="events-body"><tr><td colspan="7">Loading…</td></tr></tbody>
-      </table>
+    <!-- header card -->
+    <section class="card mt-3">
+      <div class="section spread">
+        <h1 style="margin:0">Admin • Events</h1>
+        <div class="spread" style="gap:8px">
+          <button id="reloadBtn" class="btn primary">Reload</button>
+        </div>
+      </div>
     </section>
 
-    <section>
-      <h2 id="form-title">New event</h2>
-      <form id="event-form">
-        <input type="hidden" id="event_id" />
-        <label>Organisation <select id="org_id" required></select></label>
-        <label>Category <select id="category_id" required></select></label>
-        <label>Title <input id="title" required></label>
-        <label>Start <input id="start_datetime" type="datetime-local" required></label>
-        <label>End <input id="end_datetime" type="datetime-local"></label>
-        <label>Venue <input id="venue"></label>
-        <label>City <input id="city"></label>
-        <label>State <input id="state"></label>
-        <label>Country <input id="country"></label>
-        <label>Capacity <input id="capacity" type="number" min="0"></label>
-        <label>Ticket price (AUD) <input id="ticket_price" type="number" step="0.01" min="0"></label>
-        <label>Goal amount (AUD) <input id="goal_amount" type="number" step="0.01" min="0"></label>
-        <label>Description <textarea id="description"></textarea></label>
-        <div class="toolbar">
-          <button type="submit">Save</button>
-          <button type="button" id="resetBtn">Reset</button>
+    <!-- message bar -->
+    <p id="msg" class="notice mt-2" style="display:none"></p>
+
+    <!-- workspace: left (table) + right (form) -->
+    <section class="grid grid-2 mt-3">
+      <!-- left: table -->
+      <div class="card">
+        <div class="section">
+          <h2>All events</h2>
+          <div class="table mt-2">
+            <table>
+              <thead>
+                <tr>
+                  <th>ID</th><th>Title</th><th>Category</th><th>Org</th><th>City</th><th>Start</th><th></th>
+                </tr>
+              </thead>
+              <tbody id="events-body">
+                <tr><td colspan="7" class="muted">Loading…</td></tr>
+              </tbody>
+            </table>
+          </div>
         </div>
-      </form>
-      <div id="form-msg"></div>
+      </div>
+
+      <!-- right: form -->
+      <div class="card">
+        <div class="section">
+          <h2 id="form-title">New event</h2>
+          <form id="event-form" class="grid" style="gap:12px">
+            <input type="hidden" id="event_id" />
+            <div class="form-row">
+              <label>Organisation <select id="org_id" required></select></label>
+              <label>Category <select id="category_id" required></select></label>
+            </div>
+
+            <label>Title <input id="title" required></label>
+
+            <div class="form-row">
+              <label>Start <input id="start_datetime" type="datetime-local" required></label>
+              <label>End <input id="end_datetime" type="datetime-local"></label>
+            </div>
+
+            <label>Venue <input id="venue"></label>
+
+            <div class="form-row">
+              <label>City <input id="city"></label>
+              <label>State <input id="state"></label>
+            </div>
+
+            <label>Country <input id="country"></label>
+
+            <div class="form-row">
+              <label>Capacity <input id="capacity" type="number" min="0"></label>
+              <label>Ticket price (AUD) <input id="ticket_price" type="number" step="0.01" min="0"></label>
+            </div>
+
+            <label>Goal amount (AUD) <input id="goal_amount" type="number" step="0.01" min="0"></label>
+            <label>Description <textarea id="description"></textarea></label>
+
+            <div class="actions">
+              <button type="submit" class="btn primary">Save</button>
+              <button type="button" id="resetBtn" class="btn ghost">Reset</button>
+            </div>
+          </form>
+
+          <p id="form-msg" class="notice mt-2" style="display:none"></p>
+        </div>
+      </div>
     </section>
   </div>
 
@@ -71,6 +108,5 @@
     console.log('Admin using API_BASE =', window.API_BASE);
   </script>
   <script src="js/admin.js"></script>
-  
 </body>
 </html>
