--- a/Admin/public/index.html
+++ b/Admin/public/index.html
@@ -4,109 +4,97 @@
   <meta charset="utf-8" />
   <title>Admin • Events</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- use the same global theme -->
   <link rel="stylesheet" href="/css/app.css?v=3">
 </head>
-<body>
-  <div class="container">
-    <!-- top nav like other pages -->
-    <header class="topbar">
-      <a href="/index.html">Home</a>
-      <a href="/events.html">Browse events</a>
-      <strong style="margin-left:auto">Admin</strong>
-    </header>
-
-    <!-- header card -->
-    <section class="card mt-3">
-      <div class="section spread">
-        <h1 style="margin:0">Admin • Events</h1>
-        <div class="spread" style="gap:8px">
+<body class="admin-bg">
+    <div class="container">
+      <header class="topbar">
+        <a href="/index.html">Home</a>
+        <a href="/events.html">Browse events</a>
+        <strong style="margin-left:auto">Admin</strong>
+      </header>
+  
+      <section class="card hero-admin mt-3">
+        <div class="section spread">
+          <div>
+            <div class="hero-kicker">
+              <span class="dot"></span><span class="muted">Control Panel</span>
+            </div>
+            <h1 style="margin:6px 0 0">Admin • Events</h1>
+            <p id="msg" class="notice mt-2" style="display:none"></p>
+          </div>
           <button id="reloadBtn" class="btn primary">Reload</button>
         </div>
-      </div>
-    </section>
-
-    <!-- message bar -->
-    <p id="msg" class="notice mt-2" style="display:none"></p>
-
-    <!-- workspace: left (table) + right (form) -->
-    <section class="grid grid-2 mt-3">
-      <!-- left: table -->
-      <div class="card">
-        <div class="section">
-          <h2>All events</h2>
-          <div class="table mt-2">
-            <table>
-              <thead>
-                <tr>
-                  <th>ID</th><th>Title</th><th>Category</th><th>Org</th><th>City</th><th>Start</th><th></th>
-                </tr>
-              </thead>
-              <tbody id="events-body">
-                <tr><td colspan="7" class="muted">Loading…</td></tr>
-              </tbody>
-            </table>
+      </section>
+  
+      <section class="stats mt-3">
+        <div class="stat"><div class="label">Total events</div><div class="value" id="st-total">—</div></div>
+        <div class="stat"><div class="label">Registrations</div><div class="value" id="st-regs">—</div></div>
+        <div class="stat"><div class="label">Avg ticket</div><div class="value" id="st-ticket">—</div></div>
+        <div class="stat"><div class="label">Goal coverage</div><div class="value" id="st-goal">—</div></div>
+      </section>
+    
+      <section class="grid grid-2 mt-3">
+        <div class="card">
+          <div class="section">
+            <h2>All events</h2>
+            <div class="table mt-2">
+              <table>
+                <thead>
+                  <tr><th>ID</th><th>Title</th><th>Category</th><th>Org</th><th>City</th><th>Start</th><th></th></tr>
+                </thead>
+                <tbody id="events-body"><tr><td colspan="7" class="muted">Loading…</td></tr></tbody>
+              </table>
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- right: form -->
-      <div class="card">
-        <div class="section">
-          <h2 id="form-title">New event</h2>
-          <form id="event-form" class="grid" style="gap:12px">
-            <input type="hidden" id="event_id" />
-            <div class="form-row">
-              <label>Organisation <select id="org_id" required></select></label>
-              <label>Category <select id="category_id" required></select></label>
-            </div>
-
-            <label>Title <input id="title" required></label>
-
-            <div class="form-row">
-              <label>Start <input id="start_datetime" type="datetime-local" required></label>
-              <label>End <input id="end_datetime" type="datetime-local"></label>
-            </div>
-
-            <label>Venue <input id="venue"></label>
-
-            <div class="form-row">
-              <label>City <input id="city"></label>
-              <label>State <input id="state"></label>
-            </div>
-
-            <label>Country <input id="country"></label>
-
-            <div class="form-row">
-              <label>Capacity <input id="capacity" type="number" min="0"></label>
-              <label>Ticket price (AUD) <input id="ticket_price" type="number" step="0.01" min="0"></label>
-            </div>
-
-            <label>Goal amount (AUD) <input id="goal_amount" type="number" step="0.01" min="0"></label>
-            <label>Description <textarea id="description"></textarea></label>
-
-            <div class="actions">
-              <button type="submit" class="btn primary">Save</button>
-              <button type="button" id="resetBtn" class="btn ghost">Reset</button>
-            </div>
-          </form>
-
-          <p id="form-msg" class="notice mt-2" style="display:none"></p>
+        <div class="card admin-form">
+          <div class="section">
+            <h2 id="form-title">New event</h2>
+            <form id="event-form" class="grid" style="gap:12px">
+              <input type="hidden" id="event_id" />
+              <div class="form-row">
+                <label>Organisation <select id="org_id" required></select></label>
+                <label>Category <select id="category_id" required></select></label>
+              </div>
+              <label>Title <input id="title" required></label>
+              <div class="form-row">
+                <label>Start <input id="start_datetime" type="datetime-local" required></label>
+                <label>End <input id="end_datetime" type="datetime-local"></label>
+              </div>
+              <label>Venue <input id="venue"></label>
+              <div class="form-row">
+                <label>City <input id="city"></label>
+                <label>State <input id="state"></label>
+              </div>
+              <label>Country <input id="country"></label>
+              <div class="form-row">
+                <label>Capacity <input id="capacity" type="number" min="0"></label>
+                <label>Ticket price (AUD) <input id="ticket_price" type="number" step="0.01" min="0"></label>
+              </div>
+              <label>Goal amount (AUD) <input id="goal_amount" type="number" step="0.01" min="0"></label>
+              <label>Description <textarea id="description"></textarea></label>
+  
+              <div class="actions">
+                <button type="submit" class="btn primary">Save</button>
+                <button type="button" id="resetBtn" class="btn ghost">Reset</button>
+              </div>
+            </form>
+            <p id="form-msg" class="notice mt-2" style="display:none"></p>
+          </div>
         </div>
-      </div>
-    </section>
-  </div>
-
-  <script>
-    window.API_BASE = (new URLSearchParams(location.search).get('api') || '').replace(/\/$/, '');
-  </script>
-  <script src="/config.js"></script>
-  <script>
-    window.API_BASE = (new URLSearchParams(location.search).get('api')
-                      || window.API_BASE
-                      || 'http://localhost:3060/api').replace(/\/$/, '');
-    console.log('Admin using API_BASE =', window.API_BASE);
-  </script>
-  <script src="js/admin.js"></script>
-</body>
+      </section>
+    </div>
+    <script>
+      window.API_BASE = (new URLSearchParams(location.search).get('api') || '').replace(/\/$/, '');
+    </script>
+    <script src="/config.js"></script>
+    <script>
+      window.API_BASE = (new URLSearchParams(location.search).get('api')
+                        || window.API_BASE
+                        || 'http://localhost:3060/api').replace(/\/$/, '');
+    </script>
+    <script src="js/admin.js"></script>
+  </body>  
 </html>
