--- a/Admin/public/index.html
+++ b/Admin/public/index.html
@@ -11,6 +11,9 @@
       <header class="topbar">
         <a href="/index.html">Home</a>
         <a href="/events.html">Browse events</a>
+          <a href="http://localhost:8080/index.html">Home</a>
+          <a href="http://localhost:8080/events.html">Browse events</a>
+        
         <strong style="margin-left:auto">Admin</strong>
       </header>
   
